@@ -1,0 +1,13 @@
+# Signal the status of d-i (using LEDs)
+
+machine=$(grep "^Hardware" /proc/cpuinfo | sed 's/Hardware\s*:\s*//')
+case "$machine" in
+	"HP Media Vault mv2120")
+		if [ -e /sys/class/leds/mv2120:blue:health/trigger ]; then
+			echo timer > /sys/class/leds/mv2120:blue:health/trigger
+			echo 500 > /sys/class/leds/mv2120:blue:health/delay_on
+			echo 500 > /sys/class/leds/mv2120:blue:health/delay_off
+		fi
+	;;
+esac
+
