@@ -3,6 +3,10 @@ rootskel (1.64) UNRELEASED; urgency=low
   [ Samuel Thibault ]
   * Add basic support for speakup (voice synthesis for accessibility).
 
+  [ Martin Michlmayr ]
+  * Add a startup script to change the LED on the HP mv2120 to indicate
+    the status of d-i.
+
  -- Frans Pop <fjp@debian.org>  Mon, 14 Jul 2008 19:47:24 +0200
 
 rootskel (1.63) unstable; urgency=low
